--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@headlessui/react": "^2.1.0",
     "@heroicons/react": "^2.1.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@reduxjs/toolkit": "^2.2.6",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -26,12 +27,20 @@
     "next-auth": "^4.24.7",
     "primereact": "^10.7.0",
     "query-string": "^9.0.0",
-    "react": "^18",
+    "react": "^18.3.1",
+    "react-confirm": "^0.3.0-7",
+    "react-confirm-alert": "^3.0.6",
     "react-content-loader": "^7.0.2",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-modern-drawer": "^1.3.1",
+    "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
+    "react-tabs": "^6.0.2",
+    "reactjs-popup": "^2.0.6",
+    "redux-thunk": "^3.1.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
