--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "flowbite-react": "^0.10.1",
+    "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
@@ -41,7 +42,8 @@
     "react-tabs": "^6.0.2",
     "reactjs-popup": "^2.0.6",
     "redux-thunk": "^3.1.0",
-    "swiper": "^11.1.3"
+    "swiper": "^11.1.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "20.14.9",
